--- a/PacificOceanPerch2017_Assessment.Rmd
+++ b/PacificOceanPerch2017_Assessment.Rmd
@@ -44,7 +44,8 @@ link-citations: yes
 \setlength{\parskip}{5mm plus1mm minus1mm}
 \pagebreak
 
-\pagenumbering{arabic}
+<!--\pagenumbering{roman} -->
+<!--\pagenumbering{arabic} -->
 \setcounter{page}{1}
 \renewcommand{\thefigure}{\alph{figure}}
 ‼\renewcommand{\thetable}{\alph{table}}
@@ -52,6 +53,7 @@ link-citations: yes
 ```{r child = "0_Executive_Summary.Rmd"}
 ```
 
+\pagenumbering{arabic}
 
 ```{r child = "1_Introduction.Rmd"}
 ```
@@ -74,8 +76,9 @@ link-citations: yes
 
 <!-- ***************************ACKNOWLEDGEMENTS*************************** -->
 #Acknowledgments
-Teresa Tsou (WDFW), Philip Wyland (WDFW), Ali Whitman (ODFW), Patrick Mirrick (ODFW), Patrick McDonald (CAPS), Vanessa Tuttle (ASHOP), Beth Horness (NWFSC), Kayleigh Sommers (NWFSC), Jason Jannot (NWFSC)
+Many people were instrumental in the successful completion of this assessment and their contribution is greatly appreciated.  Jason Cope, Ian Taylor, and Owen Hamel contributed greatly with discussions about data, modeling, and SS.  We are greatful to Theresa Tsou (WDFW) and Phillip Wyland (WDFW) who provided research data and the first historical reconstruction of catch for Washington state.  Ali Whitman (ODFW), Patrick Mirrick (ODFW), and Ted Calavan (ODFW) provided Oregon composition data, historical catches, corrected PacFIN catches, and quickly uploaded age data that were critical to this assessment.  We appreciate Vanessa Tuttle's patience and responsiveness to providing data. Don Pearson (NOAA) provided historical catch information and compiled the extensive management changes for `r spp` which were critical in understanding and modeling fishery behavior.  John Wallace provided multiple last minute PacFIN extractions and analyzed historical discard rates for use in the assessment.
 
+We are very grateful to Patrick McDonald and the team of agers at CAP for their hard work reading numerous otoliths and availability to answer questions when needed. Beth Horness was always eager to help, quick to supply survey extractions, and answered numerous questions we had. Jason Jannot and Kayleigh Sommers assisted with data from the WCGOP and entertained our many questions.  We would like to acknowledge our survey team and their dedication to improving the assessments we do. The assessment was greatly improved through the many discussions within the Population Ecology team in the FRAM division at the NWFSC.
 
 \newpage
 \FloatBarrier
@@ -104,7 +107,7 @@ Teresa Tsou (WDFW), Philip Wyland (WDFW), Ali Whitman (ODFW), Patrick Mirrick (O
 <!-- ====================================================================== -->
 \color{black}
 
-#References{-}
+#References
 \renewcommand{\thepage}{}
 
 <!-- ********************END OF THE DOCUMENT******************************* -->
