--- a/2_Assessment.Rmd
+++ b/2_Assessment.Rmd
@@ -83,7 +83,7 @@ From the 1960s through the early 1970s, foreign trawling enterprises harvested c
 
 ###Discards
 
-Data on discards of `r spp` are available from two different data sources.  The earliest source is called the Pikitch data and comes from a study organized by Ellen Pikitch that collected trawl discards from 1985-1987 [@pikitch_evaluation_1988].  The northern and southern boundaries of the study were $48^\circ 42^\prime$ N latitude and $42^\circ 60^\prime$ N. latitude respectively, which is primarily within the Columbia INPFC area [@pikitch_evaluation_1988 ; @rogers_numerical_1992].  Participation in the study was voluntary and included vessels using bottom, midwater, and shrimp trawl gears.  Observers of normal fishing operations on commercial vessels collected the data, estimated the total weight of the catch by tow and recorded the weight of species retained and discarded in the sample.  Results of the Pikitch data were obtained from John Wallace (NWFSC, personal communication) in the form of ratios of discard weight to retained weight of `r spp` and sex-specific length frequencies.  Discard estimates are shown in Table \ref{tab:Discard}.   
+Data on discards of `r spp` are available from two different data sources.  The earliest source is called the Pikitch data and comes from a study organized by Ellen Pikitch that collected trawl discards from 1985-1987 [@pikitch_evaluation_1988].  The northern and southern boundaries of the study were $48^\circ 42^\prime$ N latitude and $42^\circ 60^\prime$ N. latitude respectively, which is primarily within the Columbia INPFC area [@pikitch_evaluation_1988 ; @rogers_numerical_1992].  Participation in the study was voluntary and included vessels using bottom, midwater, and shrimp trawl gears.  Observers of normal fishing operations on commercial vessels collected the data, estimated the total weight of the catch by tow and recorded the weight of species retained and discarded in the sample.  Results of the Pikitch data were obtained from John Wallace (pers comm, NWFSC, NOAA) in the form of ratios of discard weight to retained weight of `r spp` and sex-specific length frequencies.  Discard estimates are shown in Table \ref{tab:Discard}.   
 
 The second source is from the West Coast Groundfish Observer Program (WCGOP).  This program is part of the NWFSC and has been recording discard observations since 2003. Table \ref{tab:Discard} shows the discard ratios (discarded/(discarded + retained)) of `r spp` from the WCGOP.  Since 2011, when the trawl rationalization program was implemented, observer coverage rates increased to nearly 100% for all the limited entry trawl vessels in the program and discard rates declined compared to pre-2011 rates.  Discard rates were obtained for both the catch-share and the non-catch share sector for `r spp`.  A single discard rate was calculated by weighting discard rates based on the commercial landings by each sector.  Coeffienct of variations were calculated by bootstrapping vessels within ports because the observer program randomly chooses vessels within porats to be observed in the non-catch shares sectors.  Discard length composition for the trawl fleet varied by year, with larger fish being discarded prior to 2011 (Figure \ref{fig:WCGOP_discard}).
  
@@ -93,7 +93,7 @@ The second source is from the West Coast Groundfish Observer Program (WCGOP).  T
 Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery were combined for the INPFC Vancouver and Columbia areas (Table \ref{tab:CPUE_Summary}, from Gunderson [-@gunderson_population_1977]).  Although these data reflect catch rates for the US fleet, the highest catch rates coincided with the beginning of removals by the foreign fleet.  This suggest that, barring unaccounted changes in fishing efficiency during this period, the level of abundance was high at that time.  A CV of 0.40 was used in this assessment to be consistent with the CV observed in the survey data.
 
 ###Fishery Length And Age Data
-Biological data from commercial fisheries that caught `r spp` were extracted from PacFIN (PFSMFC) on \hl{XXXX}.  Lengths taken during port sampling in Oregon and Washington were used to calculate length and age compositions.  There were no biological data for `r spp` available within PacFIN.  The overwhelming majority of these data were collected from the mid-water and bottom trawl gear, but additional biological data were collected from non-trawl gear which was grouped together with trawl gear data. Tables \ref{tab:Comm_Lengths} and \ref{tab:Comm_Ages} show the number of trips and fish sampled, along with the calculated sample sizes.  Length and age data were acquired at the trip level, and then aggregated to the state level.  The sample sizes were calculated via the Stewart Method (Ian Stewart, pers. Comm.) which for commercial fishery data is:
+Biological data from commercial fisheries that caught `r spp` were extracted from PacFIN (PFSMFC) on \hl{XXXX}.  Lengths taken during port sampling in Oregon and Washington were used to calculate length and age compositions.  There were no biological data for `r spp` available within PacFIN.  The overwhelming majority of these data were collected from the mid-water and bottom trawl gear, but additional biological data were collected from non-trawl gear which was grouped together with trawl gear data. Tables \ref{tab:Comm_Lengths} and \ref{tab:Comm_Ages} show the number of trips and fish sampled, along with the calculated sample sizes.  Length and age data were acquired at the trip level, and then aggregated to the state level.  The sample sizes were calculated via the Stewart Method (Ian Stewart, pers comm, IPHC) which for commercial fishery data is:
 
 \begin{centering}
 
@@ -126,14 +126,14 @@ The above is also the median of the prior. The prior is defined as a lognormal w
 
 ###Sex ratio, maturation, and fecundity
 
-Examining all biological data sources, the sex ratio of young fish are within 5% of 1:1 by either length or age (Figures \ref{fig:sexratio} and \ref{fig:sexratio_Age}), and hence this assessment the sex ratio at birth was assumed to be 1:1.  This assessment assumed a logistic maturity-at-length curve based on analysis of 537 fish maturity samples collected from the NWFSC shelf-slope survey.  This is revised from the previous assessment which assumed maturity-at-age based on the work of Hannah and Parker [@hannah_age-modulated_2007].  Additionally, the new maturity-at-length curve is based on the estimate of functional maturity an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the measured frequency of atretic cells (M. Head, personal communication).  The 50% size-at-maturity was estimated at 32.1 cm with maturity asymptoting to one for larger fish (Figure \ref{fig:mat}).  Comparison between the maturity-at-age used in the previous assessment and the updated functional maturity-at-length is shown in Figure \ref{fig:mat_compare}.
+Examining all biological data sources, the sex ratio of young fish are within 5% of 1:1 by either length or age (Figures \ref{fig:sexratio} and \ref{fig:sexratio_Age}), and hence this assessment the sex ratio at birth was assumed to be 1:1.  This assessment assumed a logistic maturity-at-length curve based on analysis of 537 fish maturity samples collected from the NWFSC shelf-slope survey.  This is revised from the previous assessment which assumed maturity-at-age based on the work of Hannah and Parker [@hannah_age-modulated_2007].  Additionally, the new maturity-at-length curve is based on the estimate of functional maturity an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the measured frequency of atretic cells (M. Head, pers comm, NWFSC, NOAA).  The 50% size-at-maturity was estimated at 32.1 cm with maturity asymptoting to one for larger fish (Figure \ref{fig:mat}).  Comparison between the maturity-at-age used in the previous assessment and the updated functional maturity-at-length is shown in Figure \ref{fig:mat_compare}.
 
 The fecundity-at-age has also been updated from the previous assessment based on new research.  Dick [-@dick_meta-analysis_2017] estimated new fecundity relationships for select West Coast stocks where fecundity for `r spp` was estimated equal to `r round(mod1$MGparmAdj$Eggs_scalar_Fem[1],12)`$L$^`r round(mod1$MGparmAdj$Eggs_exp_len_Fem[1],2)`^ in millions of eggs. Spawning output at length is shown in Figure \ref{fig:fecundity}.
 
 
 ###Length-weight relationship
 
-The length-weight relationship for `r spp` was estimated outside the model using all biological data available from fishery and fishery-independent data sources where the female weight-at-length in grams was estimated at `r mod1$MGparmAdj$Wtlen_1_Fem[1]`$L$^`r round(mod1$MGparmAdj$Wtlen_2_Fem[1],2)`^ and males at `r mod1$MGparmAdj$Wtlen_1_Mal[1]`$L$^`r round(mod1$MGparmAdj$Wtlen_2_Mal[1], 2)`^ where $L$ is length in cm (Figures \ref{fig:Wt_len} and \ref{fig:Wt_len_pred}).
+The length-weight relationship for `r spp` was estimated outside the model using all biological data available from fishery and fishery-independent data sources where the female weight-at-length in grams was estimated at `r format(mod1$MGparmAdj$Wtlen_1_Fem[1], scientific = TRUE)`$L$^`r round(mod1$MGparmAdj$Wtlen_2_Fem[1],2)`^ and males at `r format(mod1$MGparmAdj$Wtlen_1_Mal[1], scientific = TRUE)`$L$^`r round(mod1$MGparmAdj$Wtlen_2_Mal[1], 2)`^ where $L$ is length in cm (Figures \ref{fig:Wt_len} and \ref{fig:Wt_len_pred}).
 
 
 ###Growth (length-at-age)
@@ -206,9 +206,9 @@ Selectivity in this model is assumed to be length-based and is modeled using dou
 
 All fishery-independent indices have been reevaluated for this assessment using a spatial-temporal delta generalized linear mixed model (VAST delta-GLMM) which is updated from 2011 which used a bayesian delta-GLMM which did not incorporate spatial effects.  An additional update to the treatment of survey data was the decision to use the Triennial survey as a single time series ranging from 1980-2004.  The previous assessment opted to split this survey into early and a late index of abundance based upon the change in southern sampling and a shift in survey timing.  Northern California is considered to be the southern end of `r spp` West Coast distribution with rare encounters in central or southern California waters.  The biological data from the Triennial survey showed no discernable ontogenetic shifts in `r spp` during the early or late period of summer samples.  Based upon these investigations, the Triennial survey was retained as a single index of abundance.
 
-Maturity and fecundity were updated for this assessment based upon new research. Fecundity for `r spp` used in this assessment was base on reevaluation of the fecundity of West Coast rockfish by Dick et al. [-@dick_meta-analysis_2017] updating the previous fecundity estimates used in the 2011 assessment [@dick_modeling_2009] (Figure \ref{fig:fecundity}.  Maturity in this assessment was based on examination of 537 fish samples which were used to estimate functional maturity, an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the measured frequency of atretic cells (M. Head, personal communication).  The updated maturity curve was based on maturity-at-length where the previous estimates used in 2011 were based on maturity-at-age (Figure \ref{fig:mat_compare}. 
+Maturity and fecundity were updated for this assessment based upon new research. Fecundity for `r spp` used in this assessment was base on reevaluation of the fecundity of West Coast rockfish by Dick et al. [-@dick_meta-analysis_2017] updating the previous fecundity estimates used in the 2011 assessment [@dick_modeling_2009] (Figure \ref{fig:fecundity}).  Maturity in this assessment was based on examination of 537 fish samples which were used to estimate functional maturity, an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the measured frequency of atretic cells (M. Head, pers comm, NWFSC, NOAA).  The updated maturity curve was based on maturity-at-length where the previous estimates used in 2011 were based on maturity-at-age (Figure \ref{fig:mat_compare}). 
 
-In this assessment, the beta prior developed from a meta-analysis of West Coast groundfish was updated to the 2017 value (J. Thorson personal communication) in preliminary models, with steepness fixed in the final base model.  Additionally, the prior for natural mortality was updated base on analysis conducted by Owen Hamel (personal communication), where female natural mortality was fixed at the prior median with males estimated as an offset from the female value.
+In this assessment, the beta prior developed from a meta-analysis of West Coast groundfish was updated to the 2017 value (J. Thorson, pers comm, NWFSC, NOAA) in preliminary models, with steepness fixed in the final base model.  Additionally, the prior for natural mortality was updated base on analysis conducted by Owen Hamel (pers comm, NWFSC, NOAA), where female natural mortality was fixed at the prior median with males estimated as an offset from the female value.
 
 
 ###Summary of Fleets and Areas
@@ -240,7 +240,7 @@ The STAT team used Stock Synthesis version 3.30.03.05 by Dr. Richard Methot at t
 ###Priors
 A prior distribution was developed for the natural mortality parameter from an analysis of a maximum age of 100 years. The analysis was performed by Owen Hamel (pers comm, NWFSC, NOAA) and used data from Then et al. [-@then_evaluating_2015] to provide a lognormal distribution for natural mortality. The median of the lognormal prior is 0.054 and has a standard error of 0.4384343. 
 
-The prior for steepness ($h$) assumes a beta distribution with parameters based on an update of the Dorn rockfish prior (commonly used in past West Coast rockfish assessments) conducted by J. Thorson (pers. comm, NWFSC, NOAA) which was reviewed and endorsed by the SSC in 2017. The prior is a beta distribution with $\mu$=0.72 and $\sigma$=0.15. However, fixing steepness within the model resulted in unrealistic relative biomass levels ($>$ 1), it was also decided to fix steepness at `r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)`.  The previous assessment estimated and fixed steepness equal to 0.40.  The current data does not contain information regarding steepness and `r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)` was selected as an intermediate value between the prior and the previous assessment value.  The steepness value of `r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)` was contained within the estimated uncertainty envelope from the assessment model when either the prior value of 0.72 or 0.40 values were assumed.
+The prior for steepness ($h$) assumes a beta distribution with parameters based on an update of the Dorn rockfish prior (commonly used in past West Coast rockfish assessments) conducted by J. Thorson (pers comm, NWFSC, NOAA) which was reviewed and endorsed by the SSC in 2017. The prior is a beta distribution with $\mu$=0.72 and $\sigma$=0.15. However, fixing steepness within the model resulted in unrealistic relative biomass levels ($>$ 1), it was also decided to fix steepness at `r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)`.  The previous assessment estimated and fixed steepness equal to 0.40.  The current data does not contain information regarding steepness and `r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)` was selected as an intermediate value between the prior and the previous assessment value.  The steepness value of `r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)` was contained within the estimated uncertainty envelope from the assessment model when either the prior value of 0.72 or 0.40 values were assumed.
 
 ###Data Weighting
 
@@ -325,18 +325,39 @@ The base model parameter estimates along with approximate asymptotic standard er
 
 
 ###Uncertainty and Sensitivity Analyses
-Table \ref{tab:Sensitivity1}
+A number of sensitivity analyses were conducted, including:
 
-\ref{tab:Sensitivity1}
+\begin{enumerate}
 
-\ref{fig:sens1_ssb}
+  \item Data weighting according to the harmonic mean.
+  
+  \item Fixed steepness at the prior value of 0.72.
+  
+  \item Estimate natural mortality for female and male `r spp`.
+  
+  \item Maturity relationship used in the previous assessment.
+  
+  \item Fecundity relationship used in the previous assessment.
+  
+  \item Split the Triennial survey into two time-series, early (1980-1995) and late (1998-2004).
+  
+  \item Remove the historical commercial CPUE index.
+  
+  \item Inclusion of available Canadian fishery and survey data (does not constitute all data used in Canadian assessments).
+  
+  \item Inclusion of historical Washington research lengths.
+  
+  \item Inclusion of Oregon special projects length and age data which are sampled at the dockside of processing facilities.
+  
+\end{enumerate}
 
-\ref{fig:sens1_depl}
+Likelihood values and estimates of key paramters from each sensitivity are available in Tables \ref{tab:Sensitivity1} and \ref{tab:Sensitivity2}.  Plots of the estimated time-series of spawning output and relative biomass are shown in Figures \ref{fig:sens1_ssb}, \ref{fig:sens1_depl}, \ref{fig:sens2_ssb}, and \ref{fig:sens2_depl}.
 
-\ref{fig:sens2_ssb}
+The sensitivities which explored steepness or natural mortality had the largest change in estimated stock status relative to the base model.  Fixing steepness at the prior value resulted in the stock being near unfished spawning biomass output.  When natural mortality was esimated the esimated values were higher relative to the median of the prior used in base model, resulting in the relative biomass to be > 93%.  
 
-\ref{fig:sens_depl}
+Including additional data from either Canada, Washington research lengths, and or Oregon special projects data resulted in estimated lower stock status relative to the base model.  However, the status was still well above the management target.  
 
+Weighting the data according to the harmonic means resulted in the largest decrease in the estimated stock status relative to the base model with the stock being estimated at 68% of unfished biomass.
 
 
 ###Retrospective Analysis
@@ -348,12 +369,21 @@ A look at past assessments shows that the prediction of spawning biomass has gen
 
 ###Likelihood Profiles
 
+Likelihood profiles were conducted for $R_0$, steepness, and over natural mortality values seperately. These likelihood profiles were conducted by fixing the parameter at specific values and estimated the remaining parameters based on the fixed parameter value.
+
+For steepness, the negative log-likelihood was minimized at a steepness of 0.30, but the 95% confidence interval extends over the entire range of possible steepness values (excluding 0.20) (Figure \ref{fig:piner_h}).  Likelihood components by data source show that the fishery length and age data supports a low steepness value, but the NWFSC shelf-slope age data supports a higher value for steepness.  The Triennial survey index indicates a low value of steepness while the other surveys do not provide information concerning steepness.  The relative biomass for `r spp` has a wide range across different assumed values of steepness (Figure \ref{fig:h_trajectory}).
+
+The negative log-likelihood was minimized at a natural mortality value of 0.06, but the 95% confidence interval extends over the majority of natural moratility values.  The age and length data likelihood contribution was minimized at natural morality values ranging from 0.055-0.06 (Figure \ref{fig:m_like}).  The relative biomass for `r spp` widely varied across alternative values of natural mortality (Figure \ref{fig:m_trajectory}).
+
+In regards to values of $R_0$, the negative log-likehood was minimized at approximately log($R_0$) of 9.30 (Figure \ref{fig:piner_R0}.  The fishery and survey composition data was in opposition regarding values of $R_0$ where the fishery legnth and age data indicated lower values or $R_0$ while the survey ages from the `r spp` and the NWFSC shelf-slope surveys indicated a higher value.
+
 
 
 ###Reference Points
-Intro sentence or two....(Table \ref{tab:Timeseries_mod1}). 
+Reference points were calculated using the estimated selectivities and catch distribution among fleets in the most recent year of the model (`r LastYR - 1`). Sustainable total yields (landings plus discards) were `r Ref_pts_mod1[15,2]` mt when using an $SPR_{50\%}$ reference harvest rate and with a 95% confidence interval of `r `r Ref_pts_mod1[15,3]` mt based on estimates of uncertainty. The spawning output equivalent to 40% of the unfished spawning output ($SB_{40\%}$) was `r Ref_pts_mod1[7,2]` millions of eggs. The recent catches (landings plus discards) have been below the point estimate of potential long-term yields calculated using an $SPR_{50\%}$ reference point and the population has been increasing over the last decade.
 
-Equilibrium yield at the proxy $F_{MSY}$ harvest rate corresponding to 
-$SPR_{50\%}$ is `r Ref_pts_mod1[15,2]` mt.  Table \ref{tab:Ref_pts_mod1} 
-shows the full suite of estimated reference points for the northern area model 
-and Figure \ref{fig:Yield_all} shows the equilibrium yield curve.
+The predicted spawning biomass from the base model generally showed a sharp decline during the 1960s, steep increase above unfished equilibrium levels, followed by less of a decline until 2001 (Figure \ref{fig:ssb}). Since 2001, the spawning biomass has been increasing due to small catches, and recently, above average recruitment. The `r LastYR` spawning biomass relative to unfished equilibrium spawning biomass is above the target of 40% of unfished spawning biomass (Figure \ref{fig:depl}). The fishing intensity (relative 1-SPR) exceeded the current estimates of the harvest rate limit ($SPR_{50\%}$) throughout the 1960s as seen in Figure \ref{fig:1_SPR}. Recent exploitation rates on `r spp` were predicted to be much less than target levels. In recent years, the stock has experienced exploitation rates that have been below the target level while the biomass level has remained above the target level.
+
+Table \ref{Ref_pts} shows the full suite of estimated reference points for the base model and Figure \ref{fig:Yield} shows the equilibrium curve based on a steepness value fixed at `r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)`.
+
+
