--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -185,8 +185,7 @@ represent any agency determination or policy.
 }
 \setlength{\parskip}{5mm plus1mm minus1mm} \pagebreak
 
-\pagenumbering{arabic} \setcounter{page}{1}
-\renewcommand{\thefigure}{\alph{figure}}
+\setcounter{page}{1} \renewcommand{\thefigure}{\alph{figure}}
 ‼\renewcommand{\thetable}{\alph{table}}
 
 \section*{Executive Summary}\label{executive-summary}
@@ -213,13 +212,13 @@ this assessment.
 \addcontentsline{toc}{subsection}{Landings}
 
 The first year that harvest of Pacific ocean perch exceeded 1 mt off the
-US West Coast first occured in 1929. Catches ramped up in the 1940s with
-large removals in Washington waters. During the 1950s the removals
-primarly occured in Oregon waters with catches from Washington declining
+US West Coast first occurred in 1929. Catches ramped up in the 1940s
+with large removals in Washington waters. During the 1950s the removals
+primary occurred in Oregon waters with catches from Washington declining
 following the 1940s. The largest removals in 1966-1968 were largely a
-result of harvest by foreing vessels. The fishery proceed with more
+result of harvest by foreign vessels. The fishery proceed with more
 moderate removals ranging between 1,200 to 2,600 metric tons per year
-between 1969 to 1980. Removals generally decined from 1981 to 1994 to
+between 1969 to 1980. Removals generally declined from 1981 to 1994 to
 between 1,000 and 1,700 metric tons per year. Pacific ocean perch was
 declared overfished in 1999 resulting in large reduction in harvest in
 recent years since the declaration. Since 2000, catches of Pacific ocean
@@ -297,12 +296,12 @@ constructing the indices.
 The definition of fishing fleets have been changed from those in the
 2011 assessment. Three fishing fleets were specified within the model:
 1) a combined bottom trawl, mid-water trawl and fixed gear fleet where
-only a small fraction of Pacific ocean perch occuring by fixed gear, 2)
+only a small fraction of Pacific ocean perch occurring by fixed gear, 2)
 the historical foreign fleet, and 3) the at-sea hake fishery. The fleet
 grouping were based on discarding practices. The trawl fishery estimated
 a retention curve based upon discarding data and known management
 restrictions. However, very little if any discarding is assumed to have
-occured by the foreign fleet and the catch reported by the at-sea hake
+occurred by the foreign fleet and the catch reported by the at-sea hake
 fishery accounts for both discarded and landed fish and hence, no
 additional mortality was estimated for each of these fleets.
 
@@ -351,7 +350,7 @@ tendency for those sources of uncertainty considered in the model.
 The predicted spawning biomass from the base model generally showed a
 slight decline over the time series until 1966 when the foreign fleet
 began. A short, but sharp decline occurred, followed by a period of the
-stock biomass stabilizing or with a minimimal decline until the late
+stock biomass stabilizing or with a minimal decline until the late
 1990s. The stock showed increases in stock size following the year 2000
 when a combination of strong recruitment and low catches resulted. The
 2017 spawning biomass relative to unfished equilibrium spawning biomass
@@ -424,7 +423,7 @@ the base-case model with 95\% confidence or credibility intervals.
 
 \begin{table}[ht]
 \centering
-\caption{Recent estimated trend in recruitment with approximate 95% 
+\caption{Recent estimated trend in recruitment with approximate 95/% 
                                         confidence intervals determined from the base model} 
 \label{tab:Recruit_mod1}
 \begin{tabular}{>{\centering}p{.8in}>{\centering}p{1.0in}>{\centering}p{1.4in}>{\centering}p{1.0in}>{\centering}p{1.4in}}
@@ -456,9 +455,9 @@ to previous years. The estimated relative biomass was possibly below the
 overfished level in the early 2000s, but has likely remained above that
 level otherwise, and currently is significantly greater than the 40\%
 unfished spawning biomass target. Throughout the late 1960s and 1970s
-the exploitation rate and \((1-SPR)/(1-SPR_{50\%})\) were mostly above
-target levels. Recent exploitation rates on Pacific ocean perch were
-predicted to be significantly below target levels.
+the exploitation rate and (1-SPR)/(1-SPR\textsubscript{50\%}) were
+mostly above target levels. Recent exploitation rates on Pacific ocean
+perch were predicted to be significantly below target levels.
 
 \begin{table}[ht]
 \centering
@@ -504,6 +503,8 @@ vs.~relative spawning biomass for the base case model. Relative biomass
 is the annual spawning biomass divided by the unfished spawning biomass.
 \label{fig:Phase_all}}
 \end{figure}
+
+\FloatBarrier
 
 \subsection*{Ecosystem Considerations}\label{ecosystem-considerations}
 \addcontentsline{toc}{subsection}{Ecosystem Considerations}
@@ -605,7 +606,7 @@ Exploitation rates on Pacific ocean perch exceeded MSY proxy target
 harvest rates during the 1960s and 1970s and spawning biomass is
 predicted to have fallen below the proxy management target of 40\%.
 Exploitation rates subsequently declined to rates at or below the
-management target in the 1980s. Managment restrictions imposed in the
+management target in the 1980s. Management restrictions imposed in the
 1990s further reduced exploitation rates. An overfished declaration for
 Pacific ocean perch resulted in very low exploitation rates since 2001
 with the ACLs being set far below the OFL and ABC values.
@@ -646,23 +647,10 @@ Uncertainties}
 
 TBD after STAR panel
 
-\FloatBarrier
+\subsection*{Decision Table}\label{decision-table}
+\addcontentsline{toc}{subsection}{Decision Table}
 
-\subsection*{Decision Table(s) (groundfish
-only)}\label{decision-tables-groundfish-only}
-\addcontentsline{toc}{subsection}{Decision Table(s) (groundfish only)}
-
-\hl{Include: projected yields (OFL, ABC and ACL), spawning biomass, and stock 
-depletion levels for each year. Not required in draft assessments undergoing review.}
-
-OFL projection table: Table \ref{tab:OFL_projection}
-
-Decision table(s) Table \ref{tab:Decision_table_mod1}, Table
-\ref{tab:Decision_table_mod2}, Table \ref{tab:Decision_table_mod3}
-
-\begin{verbatim}
-Yield curve: Figure \ref{fig:Yield_all}
-\end{verbatim}
+TBD after STAR panel
 
 \begin{table}[ht]
 \centering
@@ -686,7 +674,11 @@ Year & OFL & ACL & Spawning Output ( million eggs ) & Relative Biomass \\
   2028 & 3727 & 3566 & 4981 & 0.751 \\ 
    \hline
 \end{tabular}
-\end{table}\begin{table}[ht]
+\end{table}
+
+\FloatBarrier
+
+\begin{table}[ht]
 \centering
 \caption{Summary of 10-year 
                                              projections beginning in 2019 
@@ -703,27 +695,16 @@ Year & OFL & ACL & Spawning Output ( million eggs ) & Relative Biomass \\
    \multicolumn{3}{c}{}  &  \multicolumn{2}{c}{} 
                                & \multicolumn{2}{c}{\textbf{States of nature}} 
                                & \multicolumn{2}{c}{} \\
-  \multicolumn{3}{c}{}  &  \multicolumn{2}{c}{Low M 0.05} 
-                               & \multicolumn{2}{c}{Base M 0.07} 
-                               &  \multicolumn{2}{c}{High M 0.09} \\
+  \multicolumn{3}{c}{}  &  \multicolumn{2}{c}{Low State of Nature} 
+                               & \multicolumn{2}{c}{Base State of Nature} 
+                               &  \multicolumn{2}{c}{High State of Nature} \\
  \hline
  & Year & Catch & Spawning Output & Depletion & Spawning Output & Depletion & Spawning Output & Depletion \\ 
   \hline
  & 2019 & - & - & - & - & - & - & - \\ 
    & 2020 & - & - & - & - & - & - & - \\ 
    & 2021 & - & - & - & - & - & - & - \\ 
-  40-10 Rule,  & 2022 & - & - & - & - & - & - & - \\ 
-  Low M & 2023 & - & - & - & - & - & - & - \\ 
-   & 2024 & - & - & - & - & - & - & - \\ 
-   & 2025 & - & - & - & - & - & - & - \\ 
-   & 2026 & - & - & - & - & - & - & - \\ 
-   & 2027 & - & - & - & - & - & - & - \\ 
-   & 2028 & - & - & - & - & - & - & - \\ 
-   \hline
- & 2019 & - & - & - & - & - & - & - \\ 
-   & 2020 & - & - & - & - & - & - & - \\ 
-   & 2021 & - & - & - & - & - & - & - \\ 
-  40-10 Rule & 2022 & - & - & - & - & - & - & - \\ 
+  Catch Option 1 & 2022 & - & - & - & - & - & - & - \\ 
    & 2023 & - & - & - & - & - & - & - \\ 
    & 2024 & - & - & - & - & - & - & - \\ 
    & 2025 & - & - & - & - & - & - & - \\ 
@@ -734,8 +715,19 @@ Year & OFL & ACL & Spawning Output ( million eggs ) & Relative Biomass \\
  & 2019 & - & - & - & - & - & - & - \\ 
    & 2020 & - & - & - & - & - & - & - \\ 
    & 2021 & - & - & - & - & - & - & - \\ 
-  40-10 Rule, & 2022 & - & - & - & - & - & - & - \\ 
-  High M & 2023 & - & - & - & - & - & - & - \\ 
+  Catch Option 2 & 2022 & - & - & - & - & - & - & - \\ 
+   & 2023 & - & - & - & - & - & - & - \\ 
+   & 2024 & - & - & - & - & - & - & - \\ 
+   & 2025 & - & - & - & - & - & - & - \\ 
+   & 2026 & - & - & - & - & - & - & - \\ 
+   & 2027 & - & - & - & - & - & - & - \\ 
+   & 2028 & - & - & - & - & - & - & - \\ 
+   \hline
+ & 2019 & - & - & - & - & - & - & - \\ 
+   & 2020 & - & - & - & - & - & - & - \\ 
+   & 2021 & - & - & - & - & - & - & - \\ 
+  Catch Option 3 & 2022 & - & - & - & - & - & - & - \\ 
+   & 2023 & - & - & - & - & - & - & - \\ 
    & 2024 & - & - & - & - & - & - & - \\ 
    & 2025 & - & - & - & - & - & - & - \\ 
    & 2026 & - & - & - & - & - & - & - \\ 
@@ -757,19 +749,22 @@ Year & OFL & ACL & Spawning Output ( million eggs ) & Relative Biomass \\
 }
 \end{table}
 
-\subsection*{Research And Data Needs}\label{research-and-data-needs}
-\addcontentsline{toc}{subsection}{Research And Data Needs}
+\FloatBarrier
 
-\hl{Include: identify information gaps that seriously impede the stock assessment.}
+\subsection*{Research and Data Needs}\label{research-and-data-needs}
+\addcontentsline{toc}{subsection}{Research and Data Needs}
 
-We recommend the following research be conducted before the next
-assessment:
+There are many areas of research that could be improved to benefit the
+understanding and assessment of Pacific ocean perch. Below, are issues
+that are considered of the importance.
 
 \begin{enumerate}
 
-\item List item No. 1 in the list
+\item \textbf{Natural mortality}: Uncertainty in natural mortality translates into uncertain estimates of status and sustainable fishing levels for Pacific ocean perch. The collection of additional age data, re-reading of older age samples, reading old age samples that are unread, and improved understanding of the life-history of Pacific ocean perch may reduce that uncertainty.
 
-\item List item No. 2 in the list, etc.
+\item \textbf{Steepness}: The amount of stock resilience, steepness, dictates the rate at which a stock can rebuild from low stock sizes.  Improved understanting regarding the steepness of US west coast Pacific ocean perch will reduce our uncertainty regarding current stock status.
+
+\item \textbf{Basin-wide understanding of stock structure, biology, connectivity, and distribution:} This is a stock assessment for Pacific ocean perch off of the west coast of the US and does not consider data from British Columbia or Alaska. Further investigating and comparing the data and predictions from British Columbia and Alaska to determine if there are similarities with the US west Ccast observations would help to define the connectivity between Pacific ocean perch north and south of the U.S.-Canada border.
 
 \end{enumerate}
 
@@ -805,12 +800,14 @@ Recruits & 133246 &   4814 &   8279 &  16107 &   2113 &  29278 &   5078 &  10096
 }
 \end{sidewaystable}
 
+\FloatBarrier
+
 \begin{figure}
 \centering
 \includegraphics{r4ss/plots_mod1/yield1_yield_curve.png}
 \caption{Equilibrium yield curve for the base case model. Values are
-based on the 2016 fishery selectivity and with steepness fixed
-at\ldots{} \label{fig:Yield_all}}
+based on the 2016 fishery selectivity and with steepness fixed at 0.50.
+\label{fig:Yield_all}}
 \end{figure}
 
 \FloatBarrier
@@ -821,6 +818,8 @@ at\ldots{} \label{fig:Yield_all}}
 \renewcommand{\thetable}{\arabic{table}}
 
 \setcounter{figure}{0} \setcounter{table}{0}
+
+\pagenumbering{arabic}
 
 \section{Introduction}\label{introduction}
 
@@ -1284,8 +1283,8 @@ bottom, midwater, and shrimp trawl gears. Observers of normal fishing
 operations on commercial vessels collected the data, estimated the total
 weight of the catch by tow and recorded the weight of species retained
 and discarded in the sample. Results of the Pikitch data were obtained
-from John Wallace (NWFSC, personal communication) in the form of ratios
-of discard weight to retained weight of Pacific ocean perch and
+from John Wallace (pers comm, NWFSC, NOAA) in the form of ratios of
+discard weight to retained weight of Pacific ocean perch and
 sex-specific length frequencies. Discard estimates are shown in Table
 \ref{tab:Discard}.
 
@@ -1334,8 +1333,8 @@ grouped together with trawl gear data. Tables \ref{tab:Comm_Lengths} and
 \ref{tab:Comm_Ages} show the number of trips and fish sampled, along
 with the calculated sample sizes. Length and age data were acquired at
 the trip level, and then aggregated to the state level. The sample sizes
-were calculated via the Stewart Method (Ian Stewart, pers. Comm.) which
-for commercial fishery data is:
+were calculated via the Stewart Method (Ian Stewart, pers comm, IPHC)
+which for commercial fishery data is:
 
 \begin{centering}
 
@@ -1428,12 +1427,12 @@ Hannah and Parker (Hannah and Parker
 the new maturity-at-length curve is based on the estimate of functional
 maturity an approach that classifies rockfish maturity with developing
 oocytes as mature or immature based on the proportion of vitellogenin in
-the cytoplasm and the measured frequency of atretic cells (M. Head,
-personal communication). The 50\% size-at-maturity was estimated at 32.1
-cm with maturity asymptoting to one for larger fish (Figure
-\ref{fig:mat}). Comparison between the maturity-at-age used in the
-previous assessment and the updated functional maturity-at-length is
-shown in Figure \ref{fig:mat_compare}.
+the cytoplasm and the measured frequency of atretic cells (M. Head, pers
+comm, NWFSC, NOAA). The 50\% size-at-maturity was estimated at 32.1 cm
+with maturity asymptoting to one for larger fish (Figure \ref{fig:mat}).
+Comparison between the maturity-at-age used in the previous assessment
+and the updated functional maturity-at-length is shown in Figure
+\ref{fig:mat_compare}.
 
 The fecundity-at-age has also been updated from the previous assessment
 based on new research. Dick
@@ -1449,9 +1448,9 @@ relationship}\label{length-weight-relationship}
 The length-weight relationship for Pacific ocean perch was estimated
 outside the model using all biological data available from fishery and
 fishery-independent data sources where the female weight-at-length in
-grams was estimated at 0.0000104\(L\)\textsuperscript{3.09} and males at
-0.0000105\(L\)\textsuperscript{3.08} where \(L\) is length in cm
-(Figures \ref{fig:Wt_len} and \ref{fig:Wt_len_pred}).
+grams was estimated at 1.044e-05\(L\)\textsuperscript{3.09} and males at
+1.05e-05\(L\)\textsuperscript{3.08} where \(L\) is length in cm (Figures
+\ref{fig:Wt_len} and \ref{fig:Wt_len_pred}).
 
 \subsubsection{Growth (length-at-age)}\label{growth-length-at-age}
 
@@ -1657,22 +1656,22 @@ base on reevaluation of the fecundity of West Coast rockfish by Dick et
 al. (\protect\hyperlink{ref-dick_meta-analysis_2017}{2017}) updating the
 previous fecundity estimates used in the 2011 assessment (Dick
 \protect\hyperlink{ref-dick_modeling_2009}{2009}) (Figure
-\ref{fig:fecundity}. Maturity in this assessment was based on
+\ref{fig:fecundity}). Maturity in this assessment was based on
 examination of 537 fish samples which were used to estimate functional
 maturity, an approach that classifies rockfish maturity with developing
 oocytes as mature or immature based on the proportion of vitellogenin in
-the cytoplasm and the measured frequency of atretic cells (M. Head,
-personal communication). The updated maturity curve was based on
+the cytoplasm and the measured frequency of atretic cells (M. Head, pers
+comm, NWFSC, NOAA). The updated maturity curve was based on
 maturity-at-length where the previous estimates used in 2011 were based
-on maturity-at-age (Figure \ref{fig:mat_compare}.
+on maturity-at-age (Figure \ref{fig:mat_compare}).
 
 In this assessment, the beta prior developed from a meta-analysis of
-West Coast groundfish was updated to the 2017 value (J. Thorson personal
-communication) in preliminary models, with steepness fixed in the final
-base model. Additionally, the prior for natural mortality was updated
-base on analysis conducted by Owen Hamel (personal communication), where
-female natural mortality was fixed at the prior median with males
-estimated as an offset from the female value.
+West Coast groundfish was updated to the 2017 value (J. Thorson, pers
+comm, NWFSC, NOAA) in preliminary models, with steepness fixed in the
+final base model. Additionally, the prior for natural mortality was
+updated base on analysis conducted by Owen Hamel (pers comm, NWFSC,
+NOAA), where female natural mortality was fixed at the prior median with
+males estimated as an offset from the female value.
 
 \subsubsection{Summary of Fleets and
 Areas}\label{summary-of-fleets-and-areas}
@@ -1780,7 +1779,7 @@ lognormal prior is 0.054 and has a standard error of 0.4384343.
 
 The prior for steepness (\(h\)) assumes a beta distribution with
 parameters based on an update of the Dorn rockfish prior (commonly used
-in past West Coast rockfish assessments) conducted by J. Thorson (pers.
+in past West Coast rockfish assessments) conducted by J. Thorson (pers
 comm, NWFSC, NOAA) which was reviewed and endorsed by the SSC in 2017.
 The prior is a beta distribution with \(\mu\)=0.72 and \(\sigma\)=0.15.
 However, fixing steepness within the model resulted in unrealistic
@@ -2003,17 +2002,54 @@ intervals are shown in Table \ref{tab:Ref_pts}.
 \subsubsection{Uncertainty and Sensitivity
 Analyses}\label{uncertainty-and-sensitivity-analyses}
 
-Table \ref{tab:Sensitivity1}
+A number of sensitivity analyses were conducted, including:
 
-\ref{tab:Sensitivity1}
+\begin{enumerate}
 
-\ref{fig:sens1_ssb}
+  \item Data weighting according to the harmonic mean.
+  
+  \item Fixed steepness at the prior value of 0.72.
+  
+  \item Estimate natural mortality for female and male Pacific ocean perch.
+  
+  \item Maturity relationship used in the previous assessment.
+  
+  \item Fecundity relationship used in the previous assessment.
+  
+  \item Split the Triennial survey into two time-series, early (1980-1995) and late (1998-2004).
+  
+  \item Remove the historical commercial CPUE index.
+  
+  \item Inclusion of available Canadian fishery and survey data (does not constitute all data used in Canadian assessments).
+  
+  \item Inclusion of historical Washington research lengths.
+  
+  \item Inclusion of Oregon special projects length and age data which are sampled at the dockside of processing facilities.
+  
+\end{enumerate}
 
-\ref{fig:sens1_depl}
+Likelihood values and estimates of key paramters from each sensitivity
+are available in Tables \ref{tab:Sensitivity1} and
+\ref{tab:Sensitivity2}. Plots of the estimated time-series of spawning
+output and relative biomass are shown in Figures \ref{fig:sens1_ssb},
+\ref{fig:sens1_depl}, \ref{fig:sens2_ssb}, and \ref{fig:sens2_depl}.
 
-\ref{fig:sens2_ssb}
+The sensitivities which explored steepness or natural mortality had the
+largest change in estimated stock status relative to the base model.
+Fixing steepness at the prior value resulted in the stock being near
+unfished spawning biomass output. When natural mortality was esimated
+the esimated values were higher relative to the median of the prior used
+in base model, resulting in the relative biomass to be \textgreater{}
+93\%.
 
-\ref{fig:sens_depl}
+Including additional data from either Canada, Washington research
+lengths, and or Oregon special projects data resulted in estimated lower
+stock status relative to the base model. However, the status was still
+well above the management target.
+
+Weighting the data according to the harmonic means resulted in the
+largest decrease in the estimated stock status relative to the base
+model with the stock being estimated at 68\% of unfished biomass.
 
 \subsubsection{Retrospective Analysis}\label{retrospective-analysis}
 
@@ -2032,14 +2068,68 @@ show similar trends.
 
 \subsubsection{Likelihood Profiles}\label{likelihood-profiles}
 
+Likelihood profiles were conducted for \(R_0\), steepness, and over
+natural mortality values seperately. These likelihood profiles were
+conducted by fixing the parameter at specific values and estimated the
+remaining parameters based on the fixed parameter value.
+
+For steepness, the negative log-likelihood was minimized at a steepness
+of 0.30, but the 95\% confidence interval extends over the entire range
+of possible steepness values (excluding 0.20) (Figure
+\ref{fig:piner_h}). Likelihood components by data source show that the
+fishery length and age data supports a low steepness value, but the
+NWFSC shelf-slope age data supports a higher value for steepness. The
+Triennial survey index indicates a low value of steepness while the
+other surveys do not provide information concerning steepness. The
+relative biomass for Pacific ocean perch has a wide range across
+different assumed values of steepness (Figure \ref{fig:h_trajectory}).
+
+The negative log-likelihood was minimized at a natural mortality value
+of 0.06, but the 95\% confidence interval extends over the majority of
+natural moratility values. The age and length data likelihood
+contribution was minimized at natural morality values ranging from
+0.055-0.06 (Figure \ref{fig:m_like}). The relative biomass for Pacific
+ocean perch widely varied across alternative values of natural mortality
+(Figure \ref{fig:m_trajectory}).
+
+In regards to values of \(R_0\), the negative log-likehood was minimized
+at approximately log(\(R_0\)) of 9.30 (Figure \ref{fig:piner_R0}. The
+fishery and survey composition data was in opposition regarding values
+of \(R_0\) where the fishery legnth and age data indicated lower values
+or \(R_0\) while the survey ages from the Pacific ocean perch and the
+NWFSC shelf-slope surveys indicated a higher value.
+
 \subsubsection{Reference Points}\label{reference-points-1}
 
-Intro sentence or two\ldots{}.(Table \ref{tab:Timeseries_mod1}).
+Reference points were calculated using the estimated selectivities and
+catch distribution among fleets in the most recent year of the model
+(2016). Sustainable total yields (landings plus discards) were 1764.8 mt
+when using an \(SPR_{50\%}\) reference harvest rate and with a 95\%
+confidence interval of `r 1264.8 - 2264.8 mt based on estimates of
+uncertainty. The spawning output equivalent to 40\% of the unfished
+spawning output (\(SB_{40\%}\)) was 2653.2 millions of eggs. The recent
+catches (landings plus discards) have been below the point estimate of
+potential long-term yields calculated using an \(SPR_{50\%}\) reference
+point and the population has been increasing over the last decade.
 
-Equilibrium yield at the proxy \(F_{MSY}\) harvest rate corresponding to
-\(SPR_{50\%}\) is 1764.8 mt. Table \ref{tab:Ref_pts_mod1} shows the full
-suite of estimated reference points for the northern area model and
-Figure \ref{fig:Yield_all} shows the equilibrium yield curve.
+The predicted spawning biomass from the base model generally showed a
+sharp decline during the 1960s, steep increase above unfished
+equilibrium levels, followed by less of a decline until 2001 (Figure
+\ref{fig:ssb}). Since 2001, the spawning biomass has been increasing due
+to small catches, and recently, above average recruitment. The 2017
+spawning biomass relative to unfished equilibrium spawning biomass is
+above the target of 40\% of unfished spawning biomass (Figure
+\ref{fig:depl}). The fishing intensity (relative 1-SPR) exceeded the
+current estimates of the harvest rate limit (\(SPR_{50\%}\)) throughout
+the 1960s as seen in Figure \ref{fig:1_SPR}. Recent exploitation rates
+on Pacific ocean perch were predicted to be much less than target
+levels. In recent years, the stock has experienced exploitation rates
+that have been below the target level while the biomass level has
+remained above the target level.
+
+Table \ref{Ref_pts} shows the full suite of estimated reference points
+for the base model and Figure \ref{fig:Yield} shows the equilibrium
+curve based on a steepness value fixed at 0.50.
 
 \section{Harvest Projections and Decision
 Tables}\label{harvest-projections-and-decision-tables}
@@ -2091,9 +2181,31 @@ Considerations}\label{regional-management-considerations}
 
 \section{Acknowledgments}\label{acknowledgments}
 
-Teresa Tsou (WDFW), Philip Wyland (WDFW), Ali Whitman (ODFW), Patrick
-Mirrick (ODFW), Patrick McDonald (CAPS), Vanessa Tuttle (ASHOP), Beth
-Horness (NWFSC), Kayleigh Sommers (NWFSC), Jason Jannot (NWFSC)
+Many people were instrumental in the successful completion of this
+assessment and their contribution is greatly appreciated. Jason Cope,
+Ian Taylor, and Owen Hamel contributed greatly with discussions about
+data, modeling, and SS. We are greatful to Theresa Tsou (WDFW) and
+Phillip Wyland (WDFW) who provided research data and the first
+historical reconstruction of catch for Washington state. Ali Whitman
+(ODFW), Patrick Mirrick (ODFW), and Ted Calavan (ODFW) provided Oregon
+composition data, historical catches, corrected PacFIN catches, and
+quickly uploaded age data that were critical to this assessment. We
+appreciate Vanessa Tuttle's patience and responsiveness to providing
+data. Don Pearson (NOAA) provided historical catch information and
+compiled the extensive management changes for Pacific ocean perch which
+were critical in understanding and modeling fishery behavior. John
+Wallace provided multiple last minute PacFIN extractions and analyzed
+historical discard rates for use in the assessment.
+
+We are very grateful to Patrick McDonald and the team of agers at CAP
+for their hard work reading numerous otoliths and availability to answer
+questions when needed. Beth Horness was always eager to help, quick to
+supply survey extractions, and answered numerous questions we had. Jason
+Jannot and Kayleigh Sommers assisted with data from the WCGOP and
+entertained our many questions. We would like to acknowledge our survey
+team and their dedication to improving the assessments we do. The
+assessment was greatly improved through the many discussions within the
+Population Ecology team in the FRAM division at the NWFSC.
 
 \newpage
 
@@ -3002,10 +3114,10 @@ Starting year & 1918 \\
   \hline
 Status & Base.Model \\ 
   \hline
-Returned to base case & - \\ 
-  Found local minimum & - \\ 
-  Found better solution & - \\ 
-  Error in likelihood & - \\ 
+Returned to base case &  33 \\ 
+  Found local minimum &  45 \\ 
+  Found better solution &   0 \\ 
+  Error in likelihood &  22 \\ 
   Total & 100 \\ 
    \hline
 \end{tabular}
@@ -4472,16 +4584,70 @@ Pacific ocean perch. \label{fig:sens2_depl}}
 
 \FloatBarrier
 
-\FloatBarrier
+\begin{figure}
+\centering
+\includegraphics{Figures/piner_panel_h.png}
+\caption{Likelihood profile across steepness values.
+\label{fig:piner_h}}
+\end{figure}
 
 \FloatBarrier
+
+\begin{figure}
+\centering
+\includegraphics{Figures/h_trajectories.png}
+\caption{Trajectories of relative biomass across values of steepness.
+\label{fig:h_trajectory}}
+\end{figure}
+
+\FloatBarrier
+
+\begin{figure}
+\centering
+\includegraphics{Figures/m_like.png}
+\caption{Likelihood profile across natural mortality values.
+\label{fig:m_like}}
+\end{figure}
+
+\FloatBarrier
+
+\begin{figure}
+\centering
+\includegraphics{Figures/m_trajectories.png}
+\caption{Trajectories of relative biomass across values of natural
+mortality. \label{fig:m_trajectory}}
+\end{figure}
+
+\FloatBarrier
+
+\begin{figure}
+\centering
+\includegraphics{Figures/piner_panel_R0.png}
+\caption{Likelihood profile across R\textsubscript{0} values.
+\label{fig:piner_R0}}
+\end{figure}
+
+\FloatBarrier
+
+{[}Estimated spawning potential ratio (1-SPR)/(1-SPR50\%) for the
+base-case model. One minus SPR is plotted so that higher exploitation
+rates occur on the upper portion of the y-axis. The management target is
+plotted as a red horizontal line and values above this reflect harvests
+in excess of the overfishing proxy based on the SPR50\% harvest rate.
+Thelast year in the time series is 2016. \label{fig:1_SPR}{]}
+(r4ss/plots\_mod1/SPR3\_ratiointerval.png)
+
+\FloatBarrier
+
+{[}Equilibrium yield curve for the base case model. Values are based on
+2016 fishery selectivty and with steepness fixed at 0.50.
+\label{fig:yield}{]} (r4ss/plots\_mod1/yield1\_yield\_curve.png)
 
 \newpage
 
 \color{black}
 
-\section*{References}\label{references}
-\addcontentsline{toc}{section}{References}
+\section{References}\label{references}
 
 \renewcommand{\thepage}{}
 
